tests/errors/clock.vir
mod CantWhenClock {
    incoming clock : Clock

    // CHECK: Expected Bit but found Clock
    when {
        case clock {}
    }
}
